@@ -3,7 +3,7 @@
 #define AT_VERSION_MAJOR         2024
 #define AT_VERSION_MINOR         4
 #define AT_VERSION_PATCH         0
-#define AT_VERSION_BUILD         1
+#define AT_VERSION_BUILD         2
 
 #define ATSTR_(x)                #x
 #define ATSTR(x)                 ATSTR_(x)
